tests/invalid/type_error_ambiguous.err_exp
type_error_ambiguous.m:035: In clause for predicate `main'/2:
type_error_ambiguous.m:035:   in argument 1 of call to predicate
type_error_ambiguous.m:035:   `io.write_int'/3:
type_error_ambiguous.m:035:   type error: type of variable `X' does not match
type_error_ambiguous.m:035:   its expected type;
type_error_ambiguous.m:035:   variable `X' has overloaded actual/expected types
type_error_ambiguous.m:035:   {
type_error_ambiguous.m:035:     (expected) int,
type_error_ambiguous.m:035:     (inferred) character,
type_error_ambiguous.m:035:     (inferred) pred(int, string),
type_error_ambiguous.m:035:     (inferred) type_error_ambiguous.t1,
type_error_ambiguous.m:035:     (inferred) type_error_ambiguous.t2
type_error_ambiguous.m:035:   }.
For more information, recompile with `-E'.
